--- a/mini_book/docs/_toc.yml
+++ b/mini_book/docs/_toc.yml
@@ -4,6 +4,7 @@
 - header: Get started
 - file: MysT_Notebooks
 - header : SATAY general Documentation
+- file: MysT_Notebooks
 # - file : General-satay-description-files/Installation_Guide_SATAY_Analysis_Software
 # - file : General-satay-description-files/satay_analysis_notes
 # - file: General-satay-description-files/
