--- a/mini_book/docs/_config.yml
+++ b/mini_book/docs/_config.yml
@@ -12,6 +12,7 @@ description: >-
 # Execution settings
 execute:
   execute_notebooks           : auto
+  exclude_patterns          : ["*"]  # A list of patterns to *skip* in execution (e.g. a notebook that takes a really long time)
 
 #######################################################################################
 # HTML-specific settings
