--- a/mini_book/docs/_toc.yml
+++ b/mini_book/docs/_toc.yml
@@ -10,7 +10,8 @@
 # - file: General-satay-description-files/
 # - header: Git Bash Preprocessing of the Sequencing data
 - header: Postprocessing scripts
-- file: Python_scripts/gene_reads.md
-- file: fitness_vs_transposon_density_essentiality_annotated
+- file: gene_reads
+- file: statistics_pergene
+# - file: fitness_vs_transposon_density_essentiality_annotated
 
 
