--- a/mini_book/docs/_toc.yml
+++ b/mini_book/docs/_toc.yml
@@ -3,6 +3,7 @@
 - file: Intro
 - header: Get started
 - file: Intro/satay_analysis_notes
+- file: Intro/data-analysis-workflow
 - file: MysT_Notebooks
 # - header : SATAY general Documentation
 # - file: MysT_Notebooks
