--- a/mini_book/docs/_config.yml
+++ b/mini_book/docs/_config.yml
@@ -48,6 +48,6 @@ latex:
 launch_buttons:
   thebelab                  : true # Add a thebelab button to pages (requires the repository to run on Binder)
   notebook_interface        : classic  # The interface interactive links will activate ["classic", "jupyterlab"]
-  binderhub_url             : https://mybinder.org/v2/gh/leilaicruz/SATAY-jupyter-book/tree/gh-pages/master  # The URL of the BinderHub (e.g., https://mybinder.org)
+  binderhub_url             : https://mybinder.org/  # The URL of the BinderHub (e.g., https://mybinder.org)
   jupyterhub_url            : ""  # The URL of the JupyterHub (e.g., https://datahub.berkeley.edu)
  
