--- a/mini_book/docs/_config.yml
+++ b/mini_book/docs/_config.yml
@@ -34,7 +34,7 @@ notebook_interface            : "notebook"
 # Launch button settings
 repository:
   url                         : https://github.com/leilaicruz/SATAY-jupyter-book
-  path_to_book                : mini_book/docs/_build/html
+  # path_to_book                : mini_book/docs/_build/html
   branch                      : gh-pages 
 
 
@@ -47,7 +47,7 @@ latex:
 
 launch_buttons:
   thebelab                  : true # Add a thebelab button to pages (requires the repository to run on Binder)
-  notebook_interface        : classic  # The interface interactive links will activate ["classic", "jupyterlab"]
+  notebook_interface        : jupyterlab  # The interface interactive links will activate ["classic", "jupyterlab"]
   binderhub_url             : https://mybinder.org/  # The URL of the BinderHub (e.g., https://mybinder.org)
   jupyterhub_url            : ""  # The URL of the JupyterHub (e.g., https://datahub.berkeley.edu)
  
