updating transposon script

--- a/mini_book/docs/_toc.yml
+++ b/mini_book/docs/_toc.yml
@@ -16,5 +16,6 @@
 - file: statistics_pergene
 - file: statistics_perchromosome_Compare
 - file: fitness_vs_transposon_density_essentiality_annotated
+- file: test
 
 
