--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,8 @@ jobs:
 
       - name: Install jupyter_book
         shell: bash -l {0}
-        run:  pip install jupyter-book --pre 
+        run:  pip install  git+https://github.com/phaustin/jupyter-book@posix_path  --upgrade  --no-deps
+        # pip install jupyter-book --pre 
 
 
       - name: Build Jupyter Book
