testing the bug changing the name of the file

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,8 +29,9 @@ jobs:
 
       - name: Install jupyter_book
         shell: bash -l {0}
-        run:  pip install  git+https://github.com/phaustin/jupyter-book@posix_path  --upgrade  --no-deps
-        # pip install jupyter-book --pre 
+        run: pip install jupyter-book --pre
+        #  
+        # pip install  git+https://github.com/phaustin/jupyter-book@posix_path  --upgrade  --no-deps
 
 
       - name: Build Jupyter Book
