--- a/mini_book/docs/_toc.yml
+++ b/mini_book/docs/_toc.yml
@@ -15,7 +15,7 @@
 - file: gene_reads
 - file: statistics_pergene
 - file: statistics_perchromosome_Compare
-- file: TransposonRead_Profile_Plot
+- file: test
 
 
 
