toc update with new file

--- a/mini_book/docs/_toc.yml
+++ b/mini_book/docs/_toc.yml
@@ -16,6 +16,7 @@
 - file: statistics_pergene
 - file: statistics_perchromosome_Compare
 - file: TransposonRead_Profile_Compare
+- file: TransposonRead_Profile_Plot
 
 
 
