adding pysam test

--- a/mini_book/docs/_toc.yml
+++ b/mini_book/docs/_toc.yml
@@ -11,6 +11,8 @@
 # - file : General-satay-description-files/satay_analysis_notes
 # - file: General-satay-description-files/
 # - header: Git Bash Preprocessing of the Sequencing data
+- header: Transposon reads from raw data 
+- file: pysam_test
 - header: Postprocessing scripts
 - file: gene_reads
 - file: statistics_pergene
