adding transposon mapping file

--- a/mini_book/docs/_config.yml
+++ b/mini_book/docs/_config.yml
@@ -1,6 +1,6 @@
 #######################################################################################
 # Book settings
-title : SATAY DATA ANALYSIS 
+title : SATAY DATA ANALYSIS LAAN-LAB TU DELFT 
 author: Gregory van Beek  
 copyright : GPL License 3.0
 logo: 'Greg.png'
