testing changing name Intro file

--- a/mini_book/docs/_toc.yml
+++ b/mini_book/docs/_toc.yml
@@ -1,6 +1,6 @@
 # - file: README
 
-- file: Intro
+- file: Introduction
 - part: Get started
 - file: Intro/satay_analysis_notes
 - file: Intro/data-analysis-workflow
