--- a/mini_book/docs/_toc.yml
+++ b/mini_book/docs/_toc.yml
@@ -15,6 +15,7 @@
   - file: gene_reads
   - file: statistics_pergene
   - file: statistics_perchromosome_Compare
+  - file: from-reads-to-essential-genes
 
 
 
